GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Total_Incident_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Total_Incident_Compensation__c</fullName>
    <inlineHelpText>Sum of all individual incident records (read only)</inlineHelpText>
    <label>Total Incident Comp</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>