GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Total_Online_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Total_Online_Compensation__c</fullName>
    <label>Total Online Compensation</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>