GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Total_Online_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Online_Points__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Online Points</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>