GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Train_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Train_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Train Cancelled</label>
    <type>Checkbox</type>
</CustomField>