GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Train_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Train_Compensation__c</fullName>
    <label>Train Compensation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>