GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Train_HistoryTracking__c.field-meta.xml
<CustomField>
    <fullName>Train_HistoryTracking__c</fullName>
    <label>Train_HistoryTracking</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>