GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Train_Number__c.field-meta.xml
<CustomField>
    <fullName>Train_Number__c</fullName>
    <formula>MID( Source_Ticket__r.PNR_Ticket__c , 19, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Train Number</label>
    <type>Text</type>
</CustomField>