GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Type_of_Refund__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Refund__c</fullName>
    <label>Type of Refund</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRR</fullName>
            </value>
            <value>
                <fullName>Expenses</fullName>
            </value>
            <value>
                <fullName>Other (Please Explain in Comments)</fullName>
            </value>
            <value>
                <fullName>Delay compensation</fullName>
            </value>
            <value>
                <fullName>Comfort compensation</fullName>
            </value>
            <value>
                <fullName>COVID compensation - New</fullName>
            </value>
            <value>
                <fullName>COVID compensation - Replacement</fullName>
            </value>
            <value>
                <fullName>Failed voyager voucher</fullName>
            </value>
            <value>
                <fullName>Fraud replacement</fullName>
            </value>
            <value>
                <fullName>Goodwill</fullName>
            </value>
            <value>
                <fullName>Subscription Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>