GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Update_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Update_Compensation__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Update Compensation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>