GearsetPOC/force-app/main/default/objects/Compensation__c/fields/UserAgent__c.field-meta.xml
<CustomField>
    <fullName>UserAgent__c</fullName>
    <label>User Agent</label>
    <length>200</length>
    <type>Text</type>
</CustomField>