GearsetPOC/force-app/main/default/objects/Compensation__c/fields/VisitorLocation__c.field-meta.xml
<CustomField>
    <fullName>VisitorLocation__c</fullName>
    <label>Visitor Location</label>
    <length>200</length>
    <type>Text</type>
</CustomField>