GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Voucher_Compensation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Compensation_Amount__c</fullName>
    <label>Voucher Compensation Amount</label>
    <length>32</length>
    <type>Text</type>
</CustomField>