GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Voucher_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Issue_Type__c</fullName>
    <label>Voucher Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Goodwill</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>