GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Voucher_Redeemed__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Redeemed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by an agent when the customer uses the voucher, e.g. for another booking. Used only if old face value voucher (voucher issued before Service Recovery eVouchers)</description>
    <inlineHelpText>Used only if old face value voucher (voucher issued before Service Recovery eVouchers)</inlineHelpText>
    <label>Redeemed by ECC (old face value voucher)</label>
    <type>Checkbox</type>
</CustomField>