GearsetPOC/force-app/main/default/objects/Compensation__c/fields/xTicketLoyalty_Number__c.field-meta.xml
<CustomField>
    <fullName>xTicketLoyalty_Number__c</fullName>
    <formula>Ticket__r.Loyalty_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>xTicketLoyalty Number</label>
    <type>Text</type>
</CustomField>