GearsetPOC/force-app/main/default/objects/Compensation__c/recordTypes/Bank_Transfer.recordType-meta.xml
<RecordType>
    <fullName>Bank_Transfer</fullName>
    <active>true</active>
    <description>Cash compensation (monetary value): bank details will be required</description>
    <label>Bank Transfer</label>
</RecordType>