GearsetPOC/force-app/main/default/objects/Compensation__c/recordTypes/Booking.recordType-meta.xml
<RecordType>
    <fullName>Booking</fullName>
    <active>false</active>
    <description>Eurostar Booking: processed on the Reservation system (ELGAR). A note is added to the compensation with the reference of the new PNR booked as a compensation</description>
    <label>Booking</label>
</RecordType>