GearsetPOC/force-app/main/default/objects/Compensation__c/recordTypes/Card_Refund.recordType-meta.xml
<RecordType>
    <fullName>Card_Refund</fullName>
    <active>true</active>
    <description>Ticket Refund</description>
    <label>Card Refund</label>
</RecordType>