GearsetPOC/force-app/main/default/objects/Compensation__c/recordTypes/Cheque.recordType-meta.xml
<RecordType>
    <fullName>Cheque</fullName>
    <active>false</active>
    <description>External cheque payment</description>
    <label>Cheque</label>
</RecordType>