GearsetPOC/force-app/main/default/objects/Compensation__c/recordTypes/Gift.recordType-meta.xml
<RecordType>
    <fullName>Gift</fullName>
    <active>false</active>
    <description>Gift Rewards: processed by Finance (an order is manually sent to them)</description>
    <label>Gift</label>
</RecordType>