GearsetPOC/force-app/main/default/objects/Compensation__c/recordTypes/Online.recordType-meta.xml
<RecordType>
    <fullName>Online</fullName>
    <active>true</active>
    <description>Record type for Online compensation</description>
    <label>Online</label>
</RecordType>