GearsetPOC/force-app/main/default/objects/Compensation__c/recordTypes/Paypal.recordType-meta.xml
<RecordType>
    <fullName>Paypal</fullName>
    <active>true</active>
    <description>Paypal transfer: processed on the Paypal website.</description>
    <label>Paypal</label>
</RecordType>