GearsetPOC/force-app/main/default/objects/Compensation__c/recordTypes/Points.recordType-meta.xml
<RecordType>
    <fullName>Points</fullName>
    <active>true</active>
    <description>Loyalty Points</description>
    <label>Points</label>
</RecordType>