GearsetPOC/force-app/main/default/objects/Compensation__c/recordTypes/Reasons_and_Tickets.recordType-meta.xml
<RecordType>
    <fullName>Reasons_and_Tickets</fullName>
    <active>false</active>
    <description>Used to store legacy vision compensation data</description>
    <label>Reasons and Tickets</label>
</RecordType>