GearsetPOC/force-app/main/default/objects/Compensation__c/recordTypes/Voucher.recordType-meta.xml
<RecordType>
    <fullName>Voucher</fullName>
    <active>true</active>
    <description>Eurostar voucher: processed on the Reservation system (ELGAR)</description>
    <label>Voucher</label>
</RecordType>