GearsetPOC/force-app/main/default/objects/Compensation__c/validationRules/Alphanumberic_PNR.validationRule-meta.xml
<ValidationRule>
    <fullName>Alphanumberic_PNR</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( 
  OR( 
    LEN ( PNR__c ) = 0, 
    REGEX( PNR__c , &quot;[a-zA-Z0-9]+&quot;) 
  ) 
)</errorConditionFormula>
    <errorDisplayField>PNR__c</errorDisplayField>
    <errorMessage>PNR can only contain alphanumeric characters</errorMessage>
</ValidationRule>