GearsetPOC/force-app/main/default/objects/Compensation__c/validationRules/Bank_Name_Cannot_Be_Missing_Surname.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Name_Cannot_Be_Missing_Surname</fullName>
    <active>true</active>
    <description>If Bank Account Name is Missing Surname or UK Inbound, the advisor is forced to change it</description>
    <errorConditionFormula>(Bank_Account_Name__c = &quot;Missing Surname&quot;
||
Bank_Account_Name__c = &quot;UK inbound&quot;)
&amp;&amp; NOT(ISPICKVAL(Claim_Status__c, &#39;Draft&#39;))
&amp;&amp; NOT(ISPICKVAL(Claim_Status__c, &#39;Cancelled&#39;))</errorConditionFormula>
    <errorMessage>Bank Account Name cannot be &quot;Missing Surname&quot;. Please change the name to the name that is associated with the account.</errorMessage>
</ValidationRule>