GearsetPOC/force-app/main/default/objects/Compensation__c/validationRules/Cannot_uncheck_Manually_Processed_Flag.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_uncheck_Manually_Processed_Flag</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED( Manually_Processed_CC__c ),
PRIORVALUE(Manually_Processed_CC__c) = true,
NOT( OR(
$Profile.Name = &quot;Custom System Administrator&quot;,
$Profile.Name = &quot;System Administrator&quot;
)
)
)</errorConditionFormula>
    <errorDisplayField>Manually_Processed_CC__c</errorDisplayField>
    <errorMessage>You cannot uncheck this box. Please contact Salesforce.Support@Eurostar.com if this needs to be unchecked.</errorMessage>
</ValidationRule>