GearsetPOC/force-app/main/default/objects/Compensation__c/validationRules/Comments_Box_Must_Be_Filled_Out.validationRule-meta.xml
<ValidationRule>
    <fullName>Comments_Box_Must_Be_Filled_Out</fullName>
    <active>true</active>
    <description>Comments box must be filled out for Expenses &amp; Other &quot;Type of Refund&quot;</description>
    <errorConditionFormula>(RecordType.Name = &quot;Bank Transfer&quot;
||
RecordType.Name = &quot;Card Refund&quot;
||
RecordType.Name = &quot;Paypal&quot;)
&amp;&amp;
(ISPICKVAL( Type_of_Refund__c , &quot;Expenses&quot;)
||
 ISPICKVAL( Type_of_Refund__c , &quot;Other (Please Explain in Comments)&quot;)) 
&amp;&amp;
ISBLANK(Comments__c)
&amp;&amp; NOT(ISPICKVAL(Claim_Status__c, &#39;Draft&#39;))
&amp;&amp; NOT(ISPICKVAL(Claim_Status__c, &#39;Cancelled&#39;))</errorConditionFormula>
    <errorMessage>Please enter the description of refund into the Comments box</errorMessage>
</ValidationRule>