GearsetPOC/force-app/main/default/objects/Compensation__c/validationRules/Compensation_must_be_linked_to_Customer.validationRule-meta.xml
<ValidationRule>
    <fullName>Compensation_must_be_linked_to_Customer</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(CustomerC__r.Customer_Email__c) &amp;&amp; RecordType.DeveloperName &lt;&gt; &#39;Online&#39; &amp;&amp; ISNEW()</errorConditionFormula>
    <errorDisplayField>CustomerC__c</errorDisplayField>
    <errorMessage>Compensation must be linked to customer and must have Email</errorMessage>
</ValidationRule>