GearsetPOC/force-app/main/default/objects/Compensation__c/validationRules/IBAN_Country_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>IBAN_Country_Code</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( 
ISBLANK(IBAN_Account_Number__c) || 
REGEX(LEFT(IBAN_Account_Number__c,2),&quot;[A-Z]+&quot;)
)
&amp;&amp; NOT(ISPICKVAL(Claim_Status__c, &#39;Draft&#39;))
&amp;&amp; NOT(ISPICKVAL(Claim_Status__c, &#39;Cancelled&#39;))</errorConditionFormula>
    <errorDisplayField>IBAN_Account_Number__c</errorDisplayField>
    <errorMessage>IBAN must start with a 2-letters country code (such as FR, BE, NL...)</errorMessage>
</ValidationRule>