GearsetPOC/force-app/main/default/objects/Compensation__c/validationRules/IBAN_Country_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>IBAN_Country_Length</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(IBAN_Account_Number__c) || 
NOT(
LEFT(IBAN_Account_Number__c,2)=&quot;FR&quot; &amp;&amp; LEN(IBAN_Account_Number__c)&lt;&gt;27 ||
LEFT(IBAN_Account_Number__c,2)=&quot;BE&quot; &amp;&amp; LEN(IBAN_Account_Number__c)&lt;&gt;16 ||
LEFT(IBAN_Account_Number__c,2)=&quot;NL&quot; &amp;&amp; LEN(IBAN_Account_Number__c)&lt;&gt;18
)
)
&amp;&amp; NOT(ISPICKVAL(Claim_Status__c, &#39;Draft&#39;))
&amp;&amp; NOT(ISPICKVAL(Claim_Status__c, &#39;Cancelled&#39;))</errorConditionFormula>
    <errorDisplayField>IBAN_Account_Number__c</errorDisplayField>
    <errorMessage>IBAN length is incorrect, please check that you have correctly entered the IBAN.</errorMessage>
</ValidationRule>