GearsetPOC/force-app/main/default/objects/Compensation__c/validationRules/IBAN_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>IBAN_Format</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
ISBLANK(IBAN_Account_Number__c) ||
REGEX(IBAN_Account_Number__c,&quot;[A-Z0-9]+&quot;)
)
&amp;&amp; NOT(ISPICKVAL(Claim_Status__c, &#39;Draft&#39;))
&amp;&amp; NOT(ISPICKVAL(Claim_Status__c, &#39;Cancelled&#39;))</errorConditionFormula>
    <errorDisplayField>IBAN_Account_Number__c</errorDisplayField>
    <errorMessage>IBAN must only contain UPPER CASE letters and digits.</errorMessage>
</ValidationRule>