GearsetPOC/force-app/main/default/objects/Compensation__c/validationRules/IBAN_Min_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>IBAN_Min_Length</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( 
ISBLANK(IBAN_Account_Number__c) || 
LEN(IBAN_Account_Number__c )&gt;=15
)
&amp;&amp; NOT(ISPICKVAL(Claim_Status__c, &#39;Draft&#39;))
&amp;&amp; NOT(ISPICKVAL(Claim_Status__c, &#39;Cancelled&#39;))</errorConditionFormula>
    <errorDisplayField>IBAN_Account_Number__c</errorDisplayField>
    <errorMessage>IBAN minimum length is 15 characters.</errorMessage>
</ValidationRule>