GearsetPOC/force-app/main/default/objects/Compensation__c/validationRules/Language_not_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Language_not_empty</fullName>
    <active>true</active>
    <description>Language could not be empty</description>
    <errorConditionFormula>ISBLANK(TEXT(Language__c)) &amp;&amp; RecordType.Name = &#39;Voucher&#39; &amp;&amp; ISNEW()
&amp;&amp; NOT(ISPICKVAL(Claim_Status__c, &#39;Draft&#39;))
&amp;&amp; NOT(ISPICKVAL(Claim_Status__c, &#39;Cancelled&#39;))</errorConditionFormula>
    <errorDisplayField>Language__c</errorDisplayField>
    <errorMessage>Language could not be empty</errorMessage>
</ValidationRule>