GearsetPOC/force-app/main/default/objects/Compensation__c/validationRules/New_PNR_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>New_PNR_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
ISBLANK(New_PNR__c) || LEN(New_PNR__c)=6 &amp;&amp; REGEX(New_PNR__c,&quot;[A-Z]+&quot;)
)</errorConditionFormula>
    <errorDisplayField>New_PNR__c</errorDisplayField>
    <errorMessage>New PNR must contain exactly 6 capital letters.</errorMessage>
</ValidationRule>