GearsetPOC/force-app/main/default/objects/Compensation__c/validationRules/No_updates_if_in_approval.validationRule-meta.xml
<ValidationRule>
    <fullName>No_updates_if_in_approval</fullName>
    <active>false</active>
    <description>Records cannot be updated once the case is submitted, except by System Admin and the Integration Profile. Vouchers are excluded as well as a separate rule is defined.</description>
    <errorConditionFormula>NOT($Profile.Name = &#39;Integration Profile&#39;) &amp;&amp;
NOT($Profile.Name = &#39;System Administrator&#39;) &amp;&amp;
NOT(RecordType.Name == &#39;Voucher&#39;) &amp;&amp;
( ISPICKVAL(00Nb0000005Wtod.00Nb0000007MkPm, &#39;Awaiting Approval&#39;) ||
  ISPICKVAL(00Nb0000005Wtod.00Nb0000007MkPm, &#39;Approved&#39;) )</errorConditionFormula>
    <errorMessage>No changes are allowed to Compensation records when the Case has been submitted or approved</errorMessage>
</ValidationRule>