GearsetPOC/force-app/main/default/objects/Compensation__c/validationRules/No_updates_Vouchers.validationRule-meta.xml
<ValidationRule>
    <fullName>No_updates_Vouchers</fullName>
    <active>false</active>
    <description>No updates are permitted once the case is approved.  For vouchers, the Voucher Redeemed flag and Comments are the only ones that can still be updated.</description>
    <errorConditionFormula>NOT($Profile.Name == &#39;Integration Profile&#39;) &amp;&amp; NOT($Profile.Name == &#39;System Administrator&#39;) 
&amp;&amp; (ISPICKVAL(00Nb0000005Wtod.00Nb0000007MkPm, &#39;Awaiting Approval&#39;) || ISPICKVAL(00Nb0000005Wtod.00Nb0000007MkPm, &#39;Approved&#39;))
&amp;&amp; RecordType.Name == &#39;Voucher&#39;
&amp;&amp; NOT(ISNEW())
&amp;&amp; (ISCHANGED(Reason_1__c) ||
ISCHANGED(Reason_2__c) ||
ISCHANGED(Reason_3__c) ||
ISCHANGED(Location__c ) ||
ISCHANGED(Incident_Date__c) ||
ISCHANGED(Case__c) ||
ISCHANGED(CustomerC__c) ||
ISCHANGED(PNR__c) ||
ISCHANGED(TCN_1__c) ||
ISCHANGED(TCN_2__c) ||
ISCHANGED(TCN_3__c) ||
ISCHANGED(TCN_4__c) ||
ISCHANGED(TCN_5__c) ||
ISCHANGED(TCN_6__c) ||
ISCHANGED(TCN_7__c) ||
ISCHANGED(TCN_8__c) ||
ISCHANGED(TCN_9__c) ||
ISCHANGED(TCN_10__c) ||
ISCHANGED(Payment_Amount__c) ||
ISCHANGED(Payment_Currency__c) ||
ISCHANGED(Voucher_Type__c) )</errorConditionFormula>
    <errorMessage>Record has been submitted for approval, only the Voucher Redeemed flag and Comments can be updated</errorMessage>
</ValidationRule>