GearsetPOC/force-app/main/default/objects/Compensation__c/validationRules/Payment_Amount_not_zero_or_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Amount_not_zero_or_null</fullName>
    <active>true</active>
    <errorConditionFormula>(ISBLANK(Payment_Amount__c) || Payment_Amount__c == 0) 
&amp;&amp; RecordType.DeveloperName == &#39;Voucher&#39; 
&amp;&amp; NOT(ISPICKVAL(Comp_Approval_Status__c, &#39;Draft&#39;))
&amp;&amp; NOT(ISPICKVAL(Claim_Status__c, &#39;Draft&#39;))
&amp;&amp; NOT(ISPICKVAL(Claim_Status__c, &#39;Cancelled&#39;))
&amp;&amp; OR (ISNEW(),  
						ISPICKVAL(PRIORVALUE(Comp_Approval_Status__c), &#39;Draft&#39;)
)</errorConditionFormula>
    <errorDisplayField>Payment_Amount__c</errorDisplayField>
    <errorMessage>Payment amount could not be empty or zero</errorMessage>
</ValidationRule>