GearsetPOC/force-app/main/default/objects/Compensation__c/validationRules/Payment_Amount_Rounding.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Amount_Rounding</fullName>
    <active>true</active>
    <description>Payment amount must be .00 or .50</description>
    <errorConditionFormula>IF(RecordType.Name = &quot;Voucher&quot; &amp;&amp; ISNEW(), (FLOOR(Payment_Amount__c) &lt;&gt; Payment_Amount__c) &amp;&amp; ((FLOOR(Payment_Amount__c) + 0.5) &lt;&gt; Payment_Amount__c), False)</errorConditionFormula>
    <errorMessage>Payment amount must be .00 or .50</errorMessage>
</ValidationRule>