GearsetPOC/force-app/main/default/objects/Compensation__c/validationRules/Payment_Currency_not_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Currency_not_blank</fullName>
    <active>true</active>
    <description>Payment currency could not be empty</description>
    <errorConditionFormula>ISBLANK(TEXT(Payment_Currency__c)) &amp;&amp; RecordType.Name = &#39;Voucher&#39; &amp;&amp; ISNEW()</errorConditionFormula>
    <errorDisplayField>Payment_Currency__c</errorDisplayField>
    <errorMessage>Payment currency could not be empty</errorMessage>
</ValidationRule>