GearsetPOC/force-app/main/default/objects/Compensation__c/validationRules/PayPal_Validation2.validationRule-meta.xml
<ValidationRule>
    <fullName>PayPal_Validation2</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Paypal_email__c) &amp;&amp;  RecordType.Name == &quot;Paypal Transfer&quot; &amp;&amp; NOT(ISPICKVAL(Claim_Status__c, &#39;Draft&#39;))
&amp;&amp; NOT(ISPICKVAL(Claim_Status__c, &#39;Cancelled&#39;))</errorConditionFormula>
    <errorDisplayField>Paypal_email__c</errorDisplayField>
    <errorMessage>PayPal Email Required</errorMessage>
</ValidationRule>