GearsetPOC/force-app/main/default/objects/Compensation__c/validationRules/Reset_Compensation_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Reset_Compensation_Status</fullName>
    <active>true</active>
    <description>Only allow if Integration Status &lt;&gt; &#39;Success&#39;</description>
    <errorConditionFormula>AND(ISPICKVAL(Integration_Status__c,&#39;Not Claimed&#39;),ISPICKVAL(PRIORVALUE(Integration_Status__c),&#39;Success&#39;))</errorConditionFormula>
    <errorDisplayField>Reset_Compensation__c</errorDisplayField>
    <errorMessage>Status cannot be reset as integration status already &#39;Success&#39;</errorMessage>
</ValidationRule>