GearsetPOC/force-app/main/default/objects/Compensation__c/validationRules/UK_Account_Number_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>UK_Account_Number_Format</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
ISBLANK(Bank_Account_Number__c) ||
REGEX(Bank_Account_Number__c, &quot;[0-9]{8}&quot;)
)
&amp;&amp; AND(NOT(ISPICKVAL(Claim_Status__c, &#39;Draft&#39;)), NOT(ISPICKVAL(Claim_Status__c, &#39;Cancelled&#39;)))</errorConditionFormula>
    <errorDisplayField>Bank_Account_Number__c</errorDisplayField>
    <errorMessage>Account Number must be 8-digits.</errorMessage>
</ValidationRule>