GearsetPOC/force-app/main/default/objects/Compensation__c/validationRules/UK_Sort_Code_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>UK_Sort_Code_Format</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
ISBLANK(Bank_Sort_Code__c) ||
REGEX(Bank_Sort_Code__c, &quot;[0-9]{6}&quot;)
)</errorConditionFormula>
    <errorDisplayField>Bank_Sort_Code__c</errorDisplayField>
    <errorMessage>Sort Code must be 6-digits.</errorMessage>
</ValidationRule>