GearsetPOC/force-app/main/default/objects/Compensation__c/validationRules/Voucher_Validation_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Voucher_Validation_Email</fullName>
    <active>true</active>
    <description>Voucher Email required</description>
    <errorConditionFormula>ISBLANK(Voucher_email__c) 
&amp;&amp; RecordType.Name == &quot;Voucher&quot; 
&amp;&amp; NOT(ISPICKVAL(Comp_Approval_Status__c, &#39;Draft&#39;))
&amp;&amp; NOT(ISPICKVAL(Claim_Status__c, &#39;Draft&#39;))
&amp;&amp; OR (ISNEW(),  
						AND(ISPICKVAL(PRIORVALUE(Comp_Approval_Status__c), &#39;Draft&#39;)
), ISPICKVAL(PRIORVALUE(Comp_Approval_Status__c), &#39;Cancelled&#39;))</errorConditionFormula>
    <errorDisplayField>Voucher_email__c</errorDisplayField>
    <errorMessage>Voucher Email required</errorMessage>
</ValidationRule>